# obsidian-sync

./: .dockerignore  .env.example  Dockerfile  docker-compose.yml  pyproject.toml
app/: __init__.py  config.py  dependencies.py  exceptions.py  main.py
app/models/: attachment.py  post.py
app/routers/: health.py  posts.py
app/schemas/: __init__.py  attachment.py  post.py  responses.py
app/services/: attachment_service.py  file_service.py  post_service.py
app/utils/: file_utils.py  path_utils.py  validation.py
